--- a/player.html
+++ b/player.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,4 +8,4 @@
 <audio id="player" style="width: 100%; height: 100%">
 </audio>
 </body>
-</html>
+</html>-->
